# Ushadow

./: .dockerignore  .env.default  .env.example  .env.k8s.example  .env.template  .gitignore  .gitmodules  .launcher-config.template.yaml  .launcher-config.yaml  .tmux-attach.sh  .tmux.conf  .workmux.yaml  ARCHITECTURE_OVERVIEW.md  AUDIO_PROVIDER_SUMMARY.md  AUDIO_RELAY_IMPLEMENTATION.md  CHRONICLE_IPV6_RESOLUTION.md  DECISION_POINT_1.md  DECISION_POINT_3.md  DEMONSTRATION_COMPLETE.md  DEPLOY_USHADOW_TO_K8S.md  DESIGN_REVIEW_ServicesPage.md  ENV_CONFIG_GUIDE.md  FIX_UV_DNS.md  IMPLEMENTATION_SUMMARY.md  K8S_ARCHITECTURE.md  K8S_DEPLOYMENT_SUMMARY.md  KANBAN_INTEGRATION.md  KEYCLOAK_LOGIN_FIXES.md  KUBERNETES.md  KUBERNETES_INTEGRATION.md  MULTI_PROJECT_GUIDE.md  Makefile  NOTION_INTEGRATION_SUMMARY.md  OVERVIEW.md  PIXI_SETUP.md  README.md  REFACTORING_PLAN.md  RESOLUTION_SUMMARY.md  SHARE_FEATURE_SUMMARY.md  SHARE_URL_CONFIGURATION.md  (+32 more)
clients/python/: CLIENT_README.md  README.md  pyproject.toml  ushadow_auth_client.py
clients/python/ushadow_api_client/api/default/: health_check.py  list_services.py  start_service.py  stop_service.py
clients/python/ushadow_api_client/models/: auth_jwt_login_response_200.py  health_check_response_200.py  service.py  start_service_response_200.py
ushadow/backend/: .dockerignore  BACKEND_QUICK_REF.md  Dockerfile  apply_tailscale_config.py  main.py  pyproject.toml  requirements.txt  update_keycloak_csp.py
ushadow/backend/docs/: AUTH_ARCHITECTURE.md  KEYCLOAK_LOGIN_REGISTRATION.md  SERVICE_PATTERNS.md
ushadow/backend/src/: ARCHITECTURE.md  __init__.py  backend_index.py  database.py
ushadow/backend/src/api/: auth.py  health.py  settings.py  wizard.py
ushadow/backend/src/config/: ARCHITECTURE_DEPLOYMENT.md  README.md  REFACTOR_DEPLOY_PLATFORM.md  SETTINGS_API_SPEC.md  SETTINGS_RESOLUTION_SPEC.md  __init__.py  casdoor_settings.py  config_parser.py  helpers.py  infrastructure_registry.py  instances.yaml  keycloak_settings.py  keycloak_settings.py.bak  oidc_settings.py  omegaconf_settings.py  secrets.py  settings.py  store.py  urls.py  wiring.yaml  yaml_parser.py
ushadow/backend/src/memory/: __init__.py
ushadow/backend/src/memory/adapters/: __init__.py  base.py  factory.py  mcp_adapter.py  obsidian_adapter.py  rest_adapter.py
ushadow/backend/src/memory/sources/: README.md  __init__.py  base.py  config_loader.py  integration_bridge.py  registry.py
ushadow/backend/src/middleware/: __init__.py  app_middleware.py
ushadow/backend/src/models/: __init__.py  agent.py  cloud.py  dashboard.py  deploy_target.py  deployment.py  feed.py  github_import.py  instance.py  integration.py  kanban.py  kubernetes.py  kubernetes_dns.py  memory.py  provider.py  routine.py  service.py  service_config.py  share.py  unode.py  user.py
ushadow/backend/src/routers/: agent_zero.py  audio_provider.py  audio_relay.py  auth.py  auth_hybrid.py  auth_token.py  chat.py  chronicle.py  cloud.py  compose_services.py  connect.py  dashboard.py  deployments.py  docker.py  docker_events.py  feature_flags.py  feed.py  github_import.py  github_import.py.wrongimport  health.py  instances.py  kanban.py  keycloak_admin.py  kubernetes.py  kubernetes_tailscale.py  memories.py  providers.py  routines.py  service_configs.py  service_configs.py.bak  services.py  services.py.bak  services.py.wrongimport  sessions.py  settings.py  settings.py.wrongimport  share.py  sse.py  tailscale.py  tailscale.py.wrongimport  (+5 more)
ushadow/backend/src/services/: __init__.py  agent_zero.py  auth.py  auth_dependencies.py  auth_service.py  bluesky_service.py  capability_resolver.py  casdoor_client.py  cloud_node_manager.py  compose_generator.py  compose_registry.py  config_service.py  dashboard_service.py  deployment_backends.py  deployment_manager.py  deployment_platforms.py  docker_compose_generator.py  docker_manager.py  feature_flags.py  feed_service.py  infrastructure_env_service.py  instance_manager.py  integration_operations.py  interest_extractor.py  interest_scorer.py  keycloak_admin.py  keycloak_auth.py  keycloak_client.py  keycloak_startup.py  keycloak_uma.py  keycloak_user_sync.py  kubernetes_dns_manager.py  kubernetes_manager.py  llm_client.py  mastodon_oauth.py  mcp_client.py  mcp_server.py  omegaconf_settings.py  post_fetcher.py  post_scorer.py  (+18 more)
ushadow/backend/src/services/cloud_providers/: __init__.py  base.py  digitalocean.py  hetzner.py
ushadow/backend/src/services/keycloak/: __init__.py  keycloak_admin.py  keycloak_auth.py  keycloak_client.py  keycloak_startup.py  keycloak_user_sync.py
ushadow/backend/src/services/kubernetes/: __init__.py  kubernetes_client.py  kubernetes_cluster_store.py  kubernetes_deploy.py  kubernetes_manager.py  kubernetes_manifest_builder.py
ushadow/backend/src/utils/: auth_helpers.py  deployment_targets.py  docker_helpers.py  environment.py  logging.py  mongodb.py  node_discovery.py  qrcode.py  service_urls.py  sse_bridge.py  tailscale_serve.py  telemetry.py  version.py
ushadow/backend/tests/: README.md  conftest.py  test_instance_manager.py  test_instances_router.py  test_memory_feedback_validation.py  test_omegaconf_settings.py  test_secrets.py  test_yaml_parser.py
ushadow/backend/tests/integration/: test_memory_server_sync.py  test_service_config_override.py  test_service_config_scenarios.py
ushadow/backend/tests/integration/test_routers/: test_auth.py  test_health.py
ushadow/backend/tests/unit/test_services/: test_auth_service.py  test_capability_resolver.py  test_docker_manager.py
ushadow/launcher/src-tauri/: Cargo.toml  PREREQUISITES_CONFIG.md  entitlements.plist  prerequisites.yaml  tauri.conf.json
ushadow/launcher/src-tauri/src/: config.rs  main.rs  models.rs
ushadow/launcher/src-tauri/src/commands/: bundled.rs  claude_sessions.rs  config_commands.rs  container_discovery.rs  discovery.rs  discovery_v2.rs  docker.rs  env_scanner.rs  generic_installer.rs  http_client.rs  installer.rs  kanban.rs  mod.rs  oauth_server.rs  (+8 more)
ushadow/launcher/src-tauri/tests/: TEST_TEMPLATE.rs  utils_tests.rs
ushadow/launcher/src-tauri/wix/: no-shortcuts.wxs
(+1281 files in other folders)
