[project]
name = "ushadow-backend"
version = "0.1.0"
description = "ushadow - AI Orchestration Platform Backend"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # HTTP Client for Chronicle/MCP/Agent Zero
    "httpx>=0.27.2",
    "aiohttp>=3.11.7",

    # MCP Server for LLM tool access
    "mcp>=1.1.0",

    # Database Clients
    "pymongo>=4.9.0,<4.10",  # Motor 3.6.0 requires pymongo<4.10
    "motor>=3.6.0",
    "redis>=5.2.0",

    # Authentication & Security
    "fastapi-users[beanie]>=14.0.1",
    "beanie>=1.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "bcrypt>=4.2.1",
    "pyjwt>=2.10.1",

    # CORS & Middleware
    "fastapi-cors>=0.0.6",

    # Utilities
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "docker>=7.1.0",
    "sse-starlette>=2.1.3",
    "qrcode[pil]>=8.0",
    "kubernetes>=31.0.0",

    # Logging & Monitoring
    "structlog>=24.4.0",

    # YAML parsing (pure Python version - avoids C compilation issues)
    "ruamel.yaml>=0.18.6,<0.19",

    # Configuration Management
    "omegaconf>=2.3.0",

    # LLM Integration
    "litellm>=1.50.0",

    # CLI Interactive Shell
    "prompt_toolkit>=3.0.48",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Enable comprehensive linting for backend excellence
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "C90", # mccabe complexity
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python idioms)
    "B",   # flake8-bugbear (bug patterns)
    "A",   # flake8-builtins (shadowing built-ins)
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez (timezone-aware datetimes)
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie (misc lints)
    "PT",  # flake8-pytest-style
    "RET", # flake8-return (return statement improvements)
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "COM812", # Trailing comma (handled by formatter)
    "ISC001", # Implicit string concatenation (conflicts with formatter)
]

[tool.ruff.lint.mccabe]
# Force extraction of complex functions (backend excellence)
max-complexity = 10

[tool.ruff.lint.pylint]
# Enforce good practices (backend excellence)
max-args = 5           # Force use of Pydantic models for many params
max-branches = 12      # Prevent overly complex branching
max-statements = 50    # Force function extraction
max-returns = 6        # Simplify return logic

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py (re-exports)
"__init__.py" = ["F401", "F403"]
# Allow print statements in scripts
"scripts/*" = ["T201"]
# Allow assert in tests
"tests/*" = ["S101", "PLR2004"]

[tool.ruff.lint.isort]
# Organize imports for readability
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes and trailing commas
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Custom markers for test categorization
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that require services (DB, Redis, etc.)",
    "e2e: End-to-end tests that test full workflows",
    "requires_secrets: Tests that require API keys or secrets (skipped in CI)",
    "no_secrets: Tests that run without any secrets (safe for PR checks)",
    "requires_backend: Tests that need backend services running",
    "requires_frontend: Tests that need frontend running",
    "tdd: TDD tests that document future functionality (expected to fail)",
    "stable: Stable tests that must pass in CI",
]

# Default: run only tests without secrets in CI
addopts = "-v --strict-markers"

# Environment variables for tests (set before test collection)
# These override config files to use localhost instead of Docker hostnames
env = [
    "ENVIRONMENT=test",
    "TESTING=true",
    # Use /tmp for config to avoid read-only /config mount
    "CONFIG_DIR=/tmp/pytest_config",
    "PROJECT_ROOT=/tmp",
    # Infrastructure: Use localhost (tests run on host, not in Docker)
    # directConnection=true needed for MongoDB replica set
    "MONGODB_URI=mongodb://localhost:27017/?directConnection=true",
    "MONGODB_DATABASE=ushadow_test",
    "REDIS_URL=redis://localhost:6379",
    "MONGODB_TIMEOUT_MS=5000",
]
