[package]
name = "ushadow-launcher"
version = "0.7.5"
description = "Ushadow Desktop Launcher"
authors = ["Ushadow"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-all", "path-all", "process-exit", "shell-execute", "process-relaunch", "shell-open", "process-command-api", "dialog-all", "notification-all", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["process", "time", "macros", "rt-multi-thread", "io-util", "sync"] }
reqwest = { version = "0.11", features = ["blocking"] }
open = "5"
portable-pty = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
