[package]
name = "ushadow-launcher"
version = "0.8.9"
description = "Ushadow Desktop Launcher"
authors = ["Ushadow"]
license = "MIT"
repository = ""
edition = "2021"

[[bin]]
name = "ushadow-launcher"
path = "src/main.rs"

[[bin]]
name = "kanban-cli"
path = "src/bin/kanban-cli.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-focus", "window-close", "window-set-size", "window-hide", "window-create", "window-show", "window-center", "window-set-position", "window-set-always-on-top", "window-set-title", "window-set-resizable", "clipboard-all", "path-all", "process-exit", "shell-execute", "process-relaunch", "shell-open", "process-command-api", "dialog-all", "notification-all", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["process", "time", "macros", "rt-multi-thread", "io-util", "sync"] }
reqwest = { version = "0.11", features = ["blocking"] }
warp = "0.3"
open = "5"
portable-pty = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
